--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quiz IT</title>
+  <title>IT Quiz</title>
 </head>
 
 <body>
   <div id="app">
-    <h1>Quiz IT</h1>
+    <h1>IT Quiz</h1>
   </div>
   <script type="module" src="/main.js"></script>
 </body>
