feat: :sparkles: Start quiz, display question and answers and check answer and modify style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
   <div id="app">
-    <h1>IT Quiz</h1>
+    <h1>Test your IT skills!</h1>
+    <button id="start-button">Start</button>
   </div>
   <script type="module" src="/main.js"></script>
 </body>
