--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
   <div id="app">
+    <div class="progress-bar">
+      <div class="status-bar"></div>
+    </div>
     <h1>Test your IT skills!</h1>
     <button id="start-button">Start</button>
   </div>
