style: :art: Implementation of the BEM method

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <div id="app">
     <div class="progress-bar">
-      <div class="status-bar"></div>
+      <div class="progress-bar__status"></div>
     </div>
     <h1>Test your IT skills!</h1>
-    <button id="start-button">Start</button>
+    <button class="start-button">Start</button>
   </div>
   <script type="module" src="/main.js"></script>
 </body>
